src/test/ui/parser/removed-syntax-record.stderr
error: expected type, found `{`
  --> $DIR/removed-syntax-record.rs:3:10
   |
LL | type t = { f: () }; //~ ERROR expected type, found `{`
   |          ^

error: aborting due to previous error

